Bug del filtro de visibilidad solucionado en la apk

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -56,7 +56,6 @@ ion-list:last-child {
 }
 
 .filtroVisibilidad {
-  top: 100%;
   right: 0;
   position: absolute;
 }
